# slogovik

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
