[package]
name = "slogovik"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.prod]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.small]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
